Tue Aug  3 18:24:17 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Config_Handlers/XML_File_Intf.cpp:

          Better error messages when parsing fails.

        * DAnCE/Config_Handlers/XSCRT/Traversal.hpp:

          Compile error in clang.

Tue Aug  3 12:12:36 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/etc/DAnCE.doxygen:
          Doxygen config file for dance

        * etc/ciao.doxygen:
        * etc/ciao_config_handlers.doxygen:
        * etc/ciao_dds4ccm.doxygen:
          Changed location of generated ciao documentation

        * etc/ciao_DAnCE.doxygen:
          Removed this file.

Tue Aug  3 04:29:02 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * connectors/ami4ccm/examples/Hello/models:
        * connectors/ami4ccm/examples/Hello/models/Hello-complete.xme:
        * connectors/ami4ccm/examples/Hello/models/Hello.xme:

          PICML models for the example.

        * connectors/ami4ccm/models/ami4ccm.xme:

          Updated the ami4ccm model to latest version of PICML.

        * connectors/dds4ccm/examples/Shapes/models/Shapes-complete.xme:
        * connectors/dds4ccm/examples/Shapes/models/Shapes.xme:

          Updated models for example to latest version of PICML.

        * tutorials/Quoter/Simple/Model/Quoter.xme:

          Update exampe to latest vers

Sun Aug  1 18:16:59 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next release

Sun Aug 01 11:30:54 CEST 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 0.8.1 released.

Sat Jul 31 15:03:40 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * NEWS:

          Updated.

Sat Jul 31 14:53:05 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_Core.mpc:
        * DAnCE/Deployment/Deployment_Core.mpc:

          Installed fixes.

Fri Jul 30 11:22:50 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
