@@ -4,10 +4,6 @@
 #include "ami4ccm/ami4ccm.h"
 #include "tao/debug.h"
 
-ACE_RCSID (ami4ccm,
-           ami4ccm,
-           "$Id$")
-
 CCM_AMI::ExceptionHolder_i::ExceptionHolder_i (
   ::Messaging::ExceptionHolder* holder)
     : holder_ (holder)
